--- a/05collapsingtoolbarlayoutdemo/src/main/res/layout/activity_main.xml
+++ b/05collapsingtoolbarlayoutdemo/src/main/res/layout/activity_main.xml
@@ -5,25 +5,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.np.collapsingtoolbarlayoutdemo.MainActivity">
+    tools:context="com.np.collapsingtoolbarlayoutdemo.MainActivity"
+    android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="250dp"
+        android:fitsSystemWindows="true">
 
         <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            app:contentScrim="@color/colorPrimary"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
             app:statusBarScrim="@android:color/transparent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            android:fitsSystemWindows="true">
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:background="@mipmap/daily_paper_logo"
-                app:layout_collapseMode="parallax"/>
+                app:layout_collapseMode="parallax"
+                android:fitsSystemWindows="true"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/main_toolbar"
@@ -40,9 +47,21 @@
 
         <TextView
             android:id="@+id/tv_main_content"
+            android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text=""
-            android:textSize="20sp"/>
+            android:textSize="14sp"/>
     </android.support.v4.widget.NestedScrollView>
+
+    <!-- 1. 使用 app:layout_anchor 属性指定了一个锚点,这里将锚点设置为 AppBarLayout,
+         这样悬浮按钮就会出现在 CollapsingToolbarLayout 标题栏的区域内;
+         2. 接着使用 app:layout_anchorGravity 属性将悬浮按钮定位到标题栏的右下角.-->
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/ic_launcher"
+        android:layout_margin="16dp"
+        app:layout_anchor="@id/appBar"
+        app:layout_anchorGravity="bottom|end"/>
 </android.support.design.widget.CoordinatorLayout>
